WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265853
[WebGPU] Several limits in HardwareCapabilities.mm are not realistic
https://bugs.webkit.org/show_bug.cgi?id=265853
Summary
[WebGPU] Several limits in HardwareCapabilities.mm are not realistic
Mike Wyrzykowski
Reported
2023-12-04 22:43:52 PST
[WebGPU] Several limits in HardwareCapabilities.mm are not realistic as they are 2^32 - 2, but can't actually allocate that much memory in practice without jetsams or other release assertions as this 2^32 - 2 is often multiplied by a type size where sizeof(type) >= 4
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-04 22:44:08 PST
<
rdar://problem/119171264
>
Mike Wyrzykowski
Comment 2
2023-12-04 22:51:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21323
EWS
Comment 3
2023-12-08 18:02:41 PST
Committed
271776@main
(cbc83e590816): <
https://commits.webkit.org/271776@main
> Reviewed commits have been landed. Closing PR #21323 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug