[WebGPU] Several limits in HardwareCapabilities.mm are not realistic https://bugs.webkit.org/show_bug.cgi?id=265853 <radar://119171264>

Reviewed by Dan Glastonbury.

Reporting such large of a limit will not work in practice as
we won't be able to allocate sufficient memory if a website
attempts to approach the reported limit, so reduce the limit
to something large yet reasonable.

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::largeReasonableLimit):
(WebGPU::apple3):
(WebGPU::apple4):
(WebGPU::apple5):
(WebGPU::apple6):
(WebGPU::apple7):
(WebGPU::mac2):
(WebGPU::maxUInt32Limit): Deleted.

Canonical link: https://commits.webkit.org/271776@main